Fri Aug 22 01:57:53 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/DataSampleElement.inl:

          Fix FUZZ

Thu Aug 21 22:52:12 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/DCPSDataReaderI.cpp:
        * tests/transport/error_handling/SimpleTransportClient.h:

          Fix references to GUID_UNKNOWN.

Thu Aug 21 20:01:08 UTC 2014  Byron Harris  <harrisb@ociweb.com>

        * dds/DCPS/DataSampleElement.inl:
        * dds/DCPS/DataSampleHeader.inl:
        * dds/DCPS/RTPS/Spdp.h:
        * dds/InfoRepo/PersistenceUpdater.cpp:
        * performance-tests/Bench/src/Publication.cpp:
        * performance-tests/Bench/src/StatisticalValue.h:
        * performance-tests/Bench/src/StatisticalValue.cpp:
        * performance-tests/Bench/src/Subscription.cpp:
        * performance-tests/DCPS/Priority/PublicationProfile.cpp:
        * tests/DCPS/ConfigTransports/DataReaderListener.cpp:
        * tests/DCPS/DCPSInfoRepo/DCPSDataReaderI.cpp:
        * tests/DCPS/FooType/Foo_Singleton_Transport.cpp:
        * tests/DCPS/Reconnect/DataWriterListener.cpp:
        * tests/transport/error_handling/SimpleTransportClient.h:
        * tests/transport/rtps/publisher.cpp:
        * tests/transport/rtps_reliability/rtps_reliability.cpp:

          Address missing initialization of class members reported by Coverity.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: