@@ -1,3 +1,11 @@
+Fri Aug 22 16:11:35 UTC 2014  Byron Harris  <harrisb@ociweb.com>
+
+        * tests/DCPS/MultiRepoTest/TestConfig.h:
+        * tests/DCPS/MultiRepoTest/TestMonitor.cpp:
+
+          Avoid conversions from unsigned to signed type causing
+          Visual Studio compiler to emit numerous warnings.
+
 Fri Aug 22 01:57:53 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
 
         * dds/DCPS/DataSampleElement.inl:
